--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "http-status-codes": "^2.3.0",
+    "method-override": "^3.0.0",
     "mongoose": "^8.0.1"
   }
 }
